<resources>
    <string name="app_name">Aide</string>
    <string name="welcome_title">Talk to your personal Assistant</string>
    <string name="welcome_description">Set Alarm, reminder and talk to Aide Assistant from the same app. Now it’s easier than ever to talk and get things done at the same time.</string>
    <string name="error_could_not_login">Could not login</string>

    <string name="unable_to_connect_server">Unable to connect to server.</string>
    <string name="no_internet_connection_available">No internet connection available</string>
    <string name="image_of_the_user">Image of the User</string>
    <string name="nav_author">Author</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_title_more">More</string>
    <string name="hint_type_a_message">Ask Aide</string>

    <string name="text_copied">Message copied</string>
    <string name="text_not_copied">Nothing to copy</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_note">Note</string>
    <string name="title_notes">Notes</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete_note_message">Delete this Note?</string>
    <string name="delete">Delete</string>
    <string name="no_notes">No notes</string>
    <string name="author_message">Designed and Developed by Umang Pandya</string>
    <string name="title_widget_aide_notes">Aide Notes</string>
    <string name="widget_text">Notes Widget</string>
</resources>
