<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_item_home"
            android:checked="true"
            android:icon="@drawable/nav_chat"
            android:title="@string/nav_chat" />
        <item
            android:id="@+id/navigation_item_notes"
            android:checked="true"
            android:icon="@drawable/nav_notes"
            android:title="@string/nav_note" />

    </group>

    <!--<item android:title="">-->
    <item android:title="@string/nav_title_more">
        <menu>
            <item
                android:id="@+id/navigation_author"
                android:title="@string/nav_author" />

        </menu>
    </item>

</menu>